[package]
name = "stapler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "^1.0.94"
native-windows-derive = "1.0.5"
native-windows-gui = { git = "https://github.com/spotlessbuilder/native-windows-gui.git", branch = "panic-on-bad-switch" }
windows = { version = "0.58.0", features = ["Win32_UI_Shell_Common", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_Storage_FileSystem", "Win32", "Win32_Foundation", "Win32_System_Com", "Win32_System", "Win32_UI_Controls", "docs"] }

